force-app/main/default/objects/Case_Request__c/fields/Business_Function_Affected__c.field-meta.xml
<CustomField>
    <fullName>Business_Function_Affected__c</fullName>
    <label>Business Function Affected</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Financeiro</fullName>
            </value>
            <value>
                <fullName>Vendas</fullName>
            </value>
            <value>
                <fullName>TI</fullName>
            </value>
            <value>
                <fullName>RH</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>