force-app/main/default/objects/Case_Request__c/fields/Customer_Satisfaction_Score__c.field-meta.xml
<CustomField>
    <fullName>Customer_Satisfaction_Score__c</fullName>
    <label>Customer Satisfaction Score</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Score de satisfação pós-atendimento (1 a 5)</description>
</CustomField>