force-app/main/default/objects/Case_Request__c/fields/Preferred_Contact_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_Time__c</fullName>
    <label>Preferred Contact Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manhã</fullName>
            </value>
            <value>
                <fullName>Tarde</fullName>
            </value>
            <value>
                <fullName>Noite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>