force-app/main/default/objects/Case_Request__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Low</fullName></value>
            <value><fullName>Medium</fullName></value>
            <value><fullName>High</fullName></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>