force-app/main/default/objects/Case_Request__c/fields/Product_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Serial_Number__c</fullName>
    <label>Product Serial Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>