force-app/main/default/objects/Case_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>New</fullName></value>
            <value><fullName>In Progress</fullName></value>
            <value><fullName>Escalated</fullName></value>
            <value><fullName>Closed</fullName></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>