force-app/main/default/objects/Case_Request__c/recordTypes/Premium.recordType-meta.xml
<RecordType>
    <active>true</active>
    <description>Premium case type</description>
    <label>Premium</label>
    <fullName>Premium</fullName>
</RecordType>