force-app/main/default/objects/Case_Request__c/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <active>true</active>
    <description>Standard case type</description>
    <label>Standard</label>
    <fullName>Standard</fullName>
</RecordType>