force-app/main/default/objects/Case_Request__c/validationRules/Block_Close_Without_Resolution.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Close_Without_Resolution</fullName>
    <active>true</active>
    <description>Impede o fechamento de casos sem preencher Resolution Notes</description>
    <errorConditionFormula>
        AND(
            ISPICKVAL(Status__c, "Closed"),
            ISBLANK(Resolution_Notes__c)
        )
    </errorConditionFormula>
    <errorMessage>Preencha o campo Resolution Notes antes de fechar o caso.</errorMessage>
    <errorDisplayField>Status__c</errorDisplayField>
</ValidationRule>