force-app/main/default/objects/Case_Request__c/validationRules/Require_Business_Function_For_Premium.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Business_Function_For_Premium</fullName>
    <active>true</active>
    <description>Obrigatório informar a função de negócio afetada para Premium</description>
    <errorConditionFormula>
        AND(
            $RecordType.DeveloperName = 'Premium',
            ISBLANK(TEXT(Business_Function_Affected__c))
        )
    </errorConditionFormula>
    <errorMessage>Por favor, informe a função de negócio afetada.</errorMessage>
</ValidationRule>