force-app/main/default/objects/Case_Request__c/validationRules/Require_Product_Serial_For_Standard.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Product_Serial_For_Standard</fullName>
    <active>true</active>
    <description>Obrigatório informar o número de série para Standard</description>
    <errorConditionFormula>
        AND(
            $RecordType.DeveloperName = 'Standard',
            ISBLANK(Product_Serial_Number__c)
        )
    </errorConditionFormula>
    <errorMessage>Por favor, informe o número de série do produto.</errorMessage>
</ValidationRule>